--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <h4>My top 3 movies of all times</h4>
         <hr>
         <h5>Friday</h5>
-        <p>This an african American Movie which i like the most it has been one of my favorite movies ever since i watched</p>
+        <p>This an African American Movie that i like the most it has been one of my favorite movies ever since I watched</p>
         <h5>Escape From Sorbrebor</h5>
-        <p>This movie was very emotional i think it domonstrates a deep story and indicates what happened some time ago</p>
+        <p>This movie was very emotional I think it demonstrates a deep story and indicates what happened some time ago</p>
         <h5>Pillars of the Earth</h5>
-        <p>This movie was a traditional movie i like how the casts played out their roles everything seem to be professional</p>
+        <p>This movie was a traditional movie I like how the casts played out their roles everything seems to be professional</p>
     
        <h2> <a href="./public/birthday-invite.html">birthday Invite</a></h2>
-        <img src="../assets\images/birthday-invite.png" height="200" alt="birthday image"/>
+        <img src="../assets/images/birthday-invite.png" height="200" alt="birthday image"/>
        
        <hr>
         <a href="./public/contact.html">Contact</a> <a href="./public/about.html">About Me</a>
